[gd_scene load_steps=11 format=2]

[ext_resource path="res://visual/GUI/icons/individual_32x32/icon0001.png" type="Texture" id=1]
[ext_resource path="res://visual/GUI/icons/individual_32x32/icon002.png" type="Texture" id=3]
[ext_resource path="res://scripts/battles/health_heart.gd" type="Script" id=4]

[sub_resource type="StreamTexture" id=5]
load_path = "res://.import/icon001.png-e2484258264c85c9b7a9d7c8d676aa22.stex"

[sub_resource type="Animation" id=6]
resource_name = "armor_dis"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "armor_hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 360.0, 330.0, 400.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "disappear"
tracks/0/type = "value"
tracks/0/path = NodePath("explode_particles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 10, 10 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("blood_particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "rest"
length = 0.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_top")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.9 ),
"transitions": PoolRealArray( 1, 0.615572, 1 ),
"update": 0,
"values": [ 0.0, 0.013, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.647959, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="health_heart" type="Control"]
anchor_top = 1.12494e-05
anchor_right = 0.031
anchor_bottom = 0.0889376
margin_right = 0.255938
margin_bottom = -0.200001
grow_horizontal = 0
rect_rotation = 360.0
rect_pivot_offset = Vector2( 16, 17.9932 )
script = ExtResource( 4 )

[node name="none" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )

[node name="half" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16.9932 )
texture = ExtResource( 1 )

[node name="whole" type="TextureRect" parent="."]
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16.9932 )
texture = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/armor_dis = SubResource( 6 )
anims/armor_hit = SubResource( 7 )
anims/disappear = SubResource( 4 )
anims/hit = SubResource( 2 )
anims/rest = SubResource( 3 )

[node name="blood_particles" type="CPUParticles2D" parent="."]
position = Vector2( 16, 13 )
emitting = false
amount = 30
one_shot = true
speed_scale = 2.0
explosiveness = 0.59
direction = Vector2( 0, -1 )
spread = 28.08
initial_velocity = 40.0
scale_amount = 1.9
color = Color( 1, 0.168627, 0.235294, 1 )
color_ramp = SubResource( 1 )

[node name="armor_particles" type="CPUParticles2D" parent="."]
position = Vector2( 16, 18 )
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.59
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
scale_amount = 1.9
color = Color( 0.701961, 0.701961, 0.701961, 1 )
color_ramp = SubResource( 1 )

[node name="explode_particles" type="CPUParticles2D" parent="."]
position = Vector2( 16, 18 )
emitting = false
amount = 80
lifetime = 0.7
one_shot = true
explosiveness = 0.81
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 40.0
scale_amount = 1.9
color = Color( 1, 0.168627, 0.235294, 1 )
color_ramp = SubResource( 1 )
hue_variation = 0.08
hue_variation_random = 1.0
